Fixed height issues on mobile

--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     background-color: hsl(217, 54%, 11%);
     display: flex;
     flex-direction: column;
